# ScreenshotUltra

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  plan.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/milestones/: M1-press-the-key.md  M2-annotate.md  M3-record.md  M4-scroll-and-beautify.md  M5-ocr-and-polish.md  M6-ship.md  README.md
icon/: AppIcon.icns
mac/: Info.plist  STURecorder.swift
scripts/: build-recorder.sh  install.sh  render-icon.sh
site/: build.mjs  mkdocs.yml  package-lock.json  package.json
site/content/: 404.md  capture.md  changelog.md  configuration.md  editor.md  hotkeys.md  index.md  install.md  logging.md  quick-start.md  sinks.md
site/docs/: capture.md  changelog.md  configuration.md  editor.md  hotkeys.md  index.md  install.md  logging.md  quick-start.md  sinks.md
site/static/: copy.js  style.css  theme.js
site/templates/: home.html  layout.html
site/templates/partials/: footer.html  nav.html
src/: about.rs  capture.rs  editor.rs  eyedropper.rs  help.rs  history.rs  hotkeys.rs  installer.rs  keystroke_overlay.rs  logging.rs  main.rs  ocr.rs  pin.rs  preferences.rs  quick_tray.rs  recording.rs  settings.rs  sinks.rs  tray.rs  updater.rs  welcome.rs
tests/: MANUAL.md
