[package]
name = "screenshot-ultra"
version = "0.11.0"
edition = "2021"
rust-version = "1.75"
description = "A snappy, hotkey-first macOS screenshot and screen recorder. Local-first. No cloud."
authors = ["MPJHorner <matt@heyjodie.com>"]
license = "MIT"
repository = "https://github.com/MPJHorner/ScreenshotUltra"
readme = "README.md"
keywords = ["screenshot", "macos", "capture", "hotkey", "screen-recording"]
categories = ["multimedia::images", "command-line-utilities"]

[[bin]]
name = "screenshot-ultra"
path = "src/main.rs"

[dependencies]
tao = "0.30"
tray-icon = "0.19"
global-hotkey = "0.6"
arboard = { version = "3", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs = "5"
anyhow = "1"
thiserror = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSURL", "NSGeometry", "NSObject", "NSValue", "NSTimer", "NSRunLoop", "NSThread"] }
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSPanel", "NSResponder", "NSView", "NSButton", "NSControl", "NSImage", "NSImageView", "NSScreen", "NSColor", "NSGraphics", "NSApplication", "NSCell", "NSText", "NSEvent", "NSBitmapImageRep", "NSImageRep", "NSGraphicsContext", "NSBezierPath", "NSPasteboard", "NSPasteboardItem", "NSFont", "NSStringDrawing", "NSAttributedString", "NSAlert", "NSTextField", "NSColorSampler", "NSTextView", "NSScrollView", "NSLayoutManager", "NSTextStorage", "NSTextContainer", "NSDragging", "NSDraggingItem", "NSDraggingSession", "NSVisualEffectView", "NSBox", "NSTrackingArea"] }
objc2-quartz-core = { version = "0.3", features = ["CALayer", "objc2-core-foundation"] }
objc2-core-graphics = { version = "0.3", features = ["CGColor"] }
objc2-vision = { version = "0.3", features = ["VNRequest", "VNRequestHandler", "VNRecognizeTextRequest", "VNObservation", "VNTypes"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
